Bug 351496 - Python folding is not working during initial typing

BUG: 351496

look one line up, if we have indentation based folding
otherwise we miss if we type things like

def test()
    lalalal

that lalala... will lead to new folding start in def test() line